--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -107,11 +107,18 @@ For example, if a truss is completely pinned on one end, it doesn't move, which 
 
 <SubSubSection title="Couple Moments" id="couple_moments">
 
+    When a body's rotation and the moment vector are oriented in the same direction, the couple moment does work.
+
     <Image src='/Statics/VWorkFigures/CoupleMoments.png' width='5'></Image>
 
-    When a body's roation and the moment vector are orented in the same direction, the couple moment does work.
-    
+    <p>
+    In the example above, the orange shape both translates over a distance <InlineEquation equation='dr' /> AND rotates about point A by an angle <InlineEquation equation='d\\theta' />. 
+    This rotation is caused by the couple moment from the force couple. 
+    </p>
+
+    <p>
     Couple moment  virtual work (<InlineEquation equation='dU' />) is the work produced by a couple moment (<InlineEquation equation='M' />) over an infinitesimally small angular displacement (<InlineEquation equation='d\\theta' />).
+    </p>
     
     <DisplayEquation equation='dU = M d\\theta' title="Virtual work of a couple moment." background="True" derivation="True" id="cpl-mmt">
 
