--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -217,7 +217,7 @@ If a body is in equilibrium, the sum of the virtual work done by all the forces 
 </Example>
 <Warning title="Virtual work can be an easier method of solving for some problems." id="vrt-wrk">
     <p>
-      For simple problems, virtual work is about the same amount of work as the equailibrium equations. 
+      For simple problems, virtual work is about the same amount of work as the equilibrium equations. 
     </p>
    </Warning>
 
