--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -31,7 +31,7 @@ import Col from "../../components/Col.astro"
 
 <Image src='/Statics/VWorkFigures/VirtualWork.png' width='3.5'></Image>
 
-A force does work when it produces a displacement along its line of action. 
+In general, a force does work when it produces a displacement along its line of action. When we talk about virtual work, we're talking about making those displacements infinitesimally small. 
 
 Virtual work (<InlineEquation equation='dU' />) is the work produced by a force (<InlineEquation equation='F' />) over an infinitesimally small displacement (<InlineEquation equation='dr' />).
 
@@ -120,7 +120,7 @@ For example, if a truss is completely pinned on one end, it doesn't move, which 
     Couple moment  virtual work (<InlineEquation equation='dU' />) is the work produced by a couple moment (<InlineEquation equation='M' />) over an infinitesimally small angular displacement (<InlineEquation equation='d\\theta' />).
     </p>
     
-    <DisplayEquation equation='dU = M d\\theta' title="Virtual work of a couple moment." background="True" derivation="True" id="cpl-mmt">
+    <DisplayEquation equation='dU = M \\cdot d\\theta \\hat{k}' title="Virtual work of a couple moment." background="True" derivation="True" id="cpl-mmt">
 
         <DisplayEquation equation="dU = \\Sigma \\vec{F_i} \\cdot d\\vec{r_i}"/>
         <DisplayEquation equation="dU = \\vec{F_A} \\cdot d\\vec{r_A} +\\vec{F_B} \\cdot d\\vec{r_B}"/>
