--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -29,7 +29,7 @@ import Col from "../../components/Col.astro"
 
 <!-- Lectures 34 and 35 -->
 
-In general, a force does work when it produces a displacement along its line of action. When we talk about virtual work, we're making those displacements infinitesimally small. 
+<p>In general, a force does work when it produces a displacement along its line of action. When we talk about virtual work, we're making those displacements infinitesimally small. </p>
 
 <Image src='/Statics/VWorkFigures/VirtualWork.png' width='3.5'></Image>
 
@@ -111,8 +111,8 @@ If a body is in equilibrium, the sum of the virtual work done by all the forces 
     <Item>Solve.</Item>
 </Enumerate>
 
-We can use virtual work to solve for the forces in a system without needing to solve for all of the support reactions. 
-
+<p>We can use virtual work to solve for the forces in a system without needing to solve for all of the support reactions. 
+</p>
 <p>
 For example, if a truss is completely pinned on one end, it doesn't move, which means there is no virtual work completed on that pin because there are no virtual displacements ((<InlineEquation equation='dr = 0' />). This means that we can ignore it in our virtual work equation and don't need to solve for the reaction forces at the truss pin. 
 </p>
