--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -157,6 +157,7 @@ For example, if a truss is completely pinned on one end, it doesn't move, which 
         <DisplayEquation equation="M = Wlcos\\theta"/>
     </Enumerate>
 </p>
+</div>
 </Example>
 
 <Example id="rod-wal" title="Rod leaning against a wall." solution="True">
