--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -103,7 +103,7 @@ If a body is in equilibrium, the sum of the virtual work done by all the forces 
     <Item>Draw a free body diagram of the system, including a coordinate system.</Item>
     <Item>Sketch the "deflected" position of the system.</Item>
     <Item>Define the position coordinates (measured from a fixed point).</Item>
-    <Item>Select the parallel line of action component.</Item>
+    <Item>Select the components of the forces that are parallel to the deflections (the parallel line of action components).</Item>
     <Item>Remove all the forces that do not complete any work. </Item>
     <Item>Differentiate the position coordinates to obtain virtual displacement.</Item>
     <Item>Write the virtual work equation, expressing the virtual work of every force and moment.</Item>
