--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -29,7 +29,7 @@ import Col from "../../components/Col.astro"
 
 <!-- Lectures 34 and 35 -->
 
-<p>In general, a force does work when it produces a displacement along its line of action. When we talk about virtual work, we're making those displacements infinitesimally small. </p>
+<p>In general, a force does work when it produces a displacement along its line of action. When we talk about virtual work, we're imagining those displacements becoming infinitesimally small. </p>
 
 <Image src='/Statics/VWorkFigures/VirtualWork.png' width='3.5'></Image>
 
