--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -96,7 +96,7 @@ Virtual work (<InlineEquation equation='dU' />) is the work produced by a force 
 
 <SubSection title="Principle of Virtual Work" id="principle_virtual_work">
 
-If a body is in equilibrium, the sum of the virtual work done by all the forces and couple moments acting on the body is zero. We can use this principle to solve for the forces on systems with virtual work. 
+If a body is in equilibrium, the sum of the virtual work done by all the forces and couple moments acting on the body is zero. We can use this principle to solve for the forces on systems. 
 
 <DisplayEquation equation="\\sum{dU} = \\sum{\\vec{F}d\\vec{x}} + \\sum{\\vec{M}d\\vec{\\theta}} = 0 " title="Virtual work equilibrium." background="True"/>
 
