--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -76,10 +76,10 @@ Virtual work (<InlineEquation equation='dU' />) is the work produced by a force 
     </p>
 
     <p>
-    Couple moment  virtual work (<InlineEquation equation='dU' />) is the work produced by a couple moment (<InlineEquation equation='M' />) over an infinitesimally small angular displacement (<InlineEquation equation='d\\theta' />).
+    Couple moment virtual work (<InlineEquation equation='dU' />) is the work produced by a couple moment (<InlineEquation equation='M' />) over an infinitesimally small angular displacement (<InlineEquation equation='d\\theta' />).
     </p>
     
-    <DisplayEquation equation='dU = M \\cdot d\\theta \\hat{k}' title="Virtual work of a couple moment." background="True" derivation="True" id="cpl-mmt">
+    <DisplayEquation equation='dU = \\vec{M} \\cdot d\\theta \\hat{k}' title="Virtual work of a couple moment." background="True" derivation="True" id="cpl-mmt">
 
         <DisplayEquation equation="dU = \\Sigma \\vec{F_i} \\cdot d\\vec{r_i}"/>
         <DisplayEquation equation="dU = \\vec{F_A} \\cdot d\\vec{r_A} +\\vec{F_B} \\cdot d\\vec{r_B}"/>
