--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -111,7 +111,7 @@ If a body is in equilibrium, the sum of the virtual work done by all the forces 
     <Item>Draw a free body diagram of the system, including a coordinate system.</Item>
     <Item>Sketch the "deflected" position of the system.</Item>
     <Item>Define the position coordinates (measured from a fixed point).</Item>
-    <Item>Select the components of the forces that are parallel to the virtual displacements (the parallel line of action components).</Item>
+    <Item>Identify the components of the forces or moments that are parallel to the virtual displacements (the parallel line of action components).</Item>
     <Item>Remove all the forces that do not complete any work. </Item>
     <Item>Differentiate the position coordinates to obtain virtual displacement.</Item>
     <Item>Write the virtual work equation, expressing the virtual work of every force and moment.</Item>
@@ -149,8 +149,7 @@ For example, if a truss is completely pinned on one end, it doesn't move, which 
         <Image src='/Statics/VWorkFigures/BoxFBD2.png' width='3'></Image>
         <Item> Define the Position coordinates from a fixed point. In this case, we are defining them from the origin, which is at point B.</Item>
         <DisplayEquation equation="\\vec{r_W} = (l cos\\theta + 0.2)\\hat{i} =(l sin\\theta+b)\\hat{j}"/>
-        <Item>Select the components of the forces that are parallel to the displacements. For this problem, only W has a componen. </Item>
-        <span style="display: block; text-align: center"> Fixed point at B.</span>
+        <Item>Select the components of the forces that are parallel to the displacements. For this problem, only W and M have  components parallel to any virtual displacement. </Item>
         <Item>Remove forces that do no work. </Item>
         <DisplayEquation equation="B_x, B_y, D_x, D_y"/>
         <DisplayEquation equation ="dU = 0"/>
